prod/svc.vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  namespace: vaultwarden
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: "vaultwarden"
